--- a/assets/src/scss/components/_repeating.scss
+++ b/assets/src/scss/components/_repeating.scss
@@ -206,7 +206,22 @@ form.comment-form {
             }
         }
     }
-
+    .info {
+        display: none;
+        margin-top: 15px;
+        padding: 15px 20px;
+        background-color: #eee; 
+        text-align: center;
+        font-size: 16px;
+        line-height: 22px;
+        &.is-active {
+            display: block;
+        }
+        &.is-error {
+            background-color: #fe3f3f;
+            color: #fff;
+        }
+    }
 }
 
 // Radio input
