--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -1,20 +1,22 @@
 @charset 'utf-8';
 
-//-----------------------------------
-//   Variables
-//-----------------------------------
-
-$c-primary: #41ccff;
-$c-danger: #fe3f3f;
-$c-text: #333;
-
+@import 'settings';
+@import 'node_modules/bootstrap/scss/bootstrap.scss';
 
 //-----------------------------------
 //   Final files
 //-----------------------------------
 
 // Bootstrap ----------------------/
-@import "components/bootstrap";
 @import "base/index";
 @import "components/index";
 @import "modules/index";
+
+
+/****************************************************
+ _  __    _              _             ___
+| |/ /_ _(_)_ _____ _ _ | |_____      |   \ _____ __
+| ' <| '_| \ V / -_) ' \| / / _ \  _  | |) / -_) V /
+|_|\_\_| |_|\_/\___|_||_|_\_\___/ (_) |___/\___|\_/
+
+****************************************************/
